# pip_to_poetry

./: .gitignore  .pylintrc  Makefile  README.md  pyproject.toml  requirements-dev.txt
my_app/: __main__.py
src/my_app/: app.py
